--- a/src/style.css
+++ b/src/style.css
@@ -268,8 +268,11 @@
   display: none;
 } */
 
-.benefit_lines.is-big {
+.benefit_lines.is-big,
+.benefit_lines.is-small {
   display: flex;
+  height: 100%;
+  width: 100%;
 }
 
 /* !END */
@@ -277,7 +280,7 @@
 .benefits-container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: max-content auto max-content;
+  grid-template-rows: max-content max-content max-content;
   gap: 0;
   justify-content: center;
   align-content: center;
